@@ -39,6 +39,7 @@
 <li><a href="rdoc/classes/Roda/RodaPlugins/Streaming.html">streaming</a>: Adds ability to stream responses.</li>
 <li><a href="rdoc/classes/Roda/RodaPlugins/SymbolMatchers.html">symbol_matchers</a>: Adds support for symbol-specific matching regexps.</li>
 <li><a href="rdoc/classes/Roda/RodaPlugins/SymbolViews.html">symbol_views</a>: Allows match blocks to return template name symbols, uses the template view as the response body.</li>
+<li><a href="rdoc/classes/Roda/RodaPlugins/ViewSubdirs.html">view_subdirs</a>: Allows for setting a view subdirectory to use on a per-request basis.</li>
 </ul>
 
 <h3>External Plugins</h3>
